@@ -1,6 +1,8 @@
 Revision history for BioUtils
 
 1.0.11	Under development
+	- Removed cat command from parallel contaminant filtering to improve
+	  memory efficiency.
 	- Added some bsub parameter options to filter_contaminants
 	- Added command line options to filter_contaminants
 	- Fixed naming convention bug in QC::ContaminantFilter.pm
